# openai-codex-hackathon

./: .gitignore  AGENTS.md  README.md  SETUP.md  alembic.ini  contracts.md  idea.md  mprocs.yaml  package.json  plan.md  pnpm-lock.yaml
docs/: agent-1-platform-implementation.md  agent-2-integrator-handoff.md  agent-3-frontend-implementation.md  agent-4-implementation-summary.md  agent-tasks.md  create_codex_mcp_config.sh  flow.md  github-pr-publishing.md  hackathon-video-flow.md  phase-2-tech-architecture.md  (+3 more)
services/platform/: README.md  pyproject.toml
services/platform/app/: config.py  db.py  db_init.py  main.py  mcp_server.py  models.py  seed.py
services/platform/app/api/: capabilities.py  catalog.py  credentials.py  execute.py  integrations.py  wallet.py
services/platform/app/services/: artifact_store.py  capabilities_service.py  integrations_service.py  manifest_service.py  provider_credentials.py  wallet_service.py
services/platform/app/tools/: __init__.py  get_capability_manifest.py  get_fusekit_guide.py  get_producthunt.py  registry.py  request_integration.py  scrape_url.py  search_web.py  send_email.py  send_sms.py
services/platform/scripts/: seed_demo_tools.py
services/platform/tests/: conftest.py  helpers.py  test_capabilities_api.py  test_capabilities_service.py  test_catalog_api.py  test_credentials_api.py  test_execute_api.py  test_get_capability_manifest_tool.py  test_get_fusekit_guide_tool.py  test_integrations_api.py  test_mcp_server.py  test_request_integration_tool.py  test_scrape_tool.py  test_wallet_api.py  test_wallet_service.py
(+85 files in other folders)
